# Wolf3D_rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  map_format.md
assets/geometry_sets/: default_geo_set.json  default_geo_set.xml
assets/maps/42/: geometry_map.json  geometry_map.xml  material_map.json  material_map.xml
assets/material_sets/: default_mtl_set.json  default_mtl_set.xml
assets/portal_symbol_sets/: default_portal_symbols.json  default_portal_symbols.xml
assets/spawn_symbol_sets/: default_spawn_symbols.json  default_spawn_symbols.xml
examples/: controls.rs
src/: clap.yml  controls.rs  lib.rs  main.rs  player.rs  skybox.rs  timer.rs
src/level/: geometry.rs  material.rs  mod.rs
src/math_2d/: geometry.rs  mat2.rs  mod.rs  point.rs  ray.rs  vec2.rs
src/parser/: geometry.rs  material.rs  mod.rs
tests/: controls.rs
